# Collaro

./: .dockerignore  .env.example  .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  LICENSE  README.Docker.md  README.md  Resume.md  SECURITY.md  SETUP.md  biome.json  compose.yaml  copilot-instructions.md  dev.sh  docker-compose.dev.yaml  docker-compose.yaml  drizzle.config.ts  eslint.config.mjs  global.d.ts  kubernetes-setup.md  learn.md  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  restructure.md  tailwind.config.ts  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.husky/: pre-commit
app/: globals.css  layout.tsx
components/: AuthForm.tsx  EmailTemplate.tsx  FeatureCard.tsx  HomeCard.tsx  MeetingTypeList.tsx  MobileNav.tsx  Navbar.tsx  Sidebar.tsx
constants/: card.ts  index.ts
core/: .dockerignore  biome.json  docker-compose.dev.yaml  tsconfig.json
dev/: compose.yaml
docs/: api.md  stream.md
image-service/: Cargo.toml  Dockerfile  Plan.md  docker-compose.yml
image-service/config/: default.toml
image-service/src/: lib.rs  main.rs  metrics.rs  state.rs
image-service/src/config/: loader.rs  mod.rs
image-service/src/errors/: app_error.rs
image-service/src/middleware/: auth.rs  request_id.rs
image-service/src/pipeline/: error.rs  mod.rs  processor.rs
image-service/src/routes/: delete.rs  health.rs  image.rs  mod.rs  sse.rs  upload.rs
image-service/src/s3/: client.rs  mock.rs  mod.rs
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  secret.yaml  service.yaml  serviceaccount.yaml  web.yaml
migrations/: 0000_lean_fantastic_four.sql  0001_exotic_magdalene.sql  (+1 more)
src/: env.ts  (+3 more)
(+666 files in other folders)
