[package]
name = "image-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
aws-sdk-s3 = "1"
aws-config = "1"
image = "0.25"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
uuid = { version = "1", features = ["v4"] }
mime_guess = "2"
anyhow = "1"
async-trait = "0.1"
bytes = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
